Finished spacing fix and started phot uploader fix

--- a/src/views/IDUploader/IDUploader.scss
+++ b/src/views/IDUploader/IDUploader.scss
@@ -1,15 +1,15 @@
 @import '../../vars';
 
-.gc360-dialog {
+.gc360-id-dialog {
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   &_title {
     grid-row: 1;
   }
   &_content {
     display: grid;
     grid-row: 2;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto;
     grid-row-gap: 10px;
     justify-items: center;
     &_text {
@@ -27,6 +27,8 @@
         border-width: 0.2rem;
         border-radius: 1rem;
         border-color: darkgray;
+        justify-content: center;
+        align-items: center;
         &:hover {
           background-color: #dddddd;
           box-shadow: 0 0 0 0.25rem #dddddd;
@@ -39,14 +41,14 @@
     &_button {
       grid-row: 3;
     }
-    &_actions {
-      grid-row: 4;
-    }
+  }
+  &_actions {
+    grid-row: 3;
   }
 }
 
 @media (max-width: $break-sm) {
-  .gc360-dialog {
+  .gc360-id-dialog {
     &_content {
       &_dropzone {
         &_content {
